--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet"> -->
-    <title>React App</title>
+    <title>AniJoJo</title>
   </head>
   <body>
     <div id="root"></div>
